<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <TextView
        style="@style/CategoryTextStyle"
        android:text="@string/category_overview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_product_name"
            style="@style/TextFieldStyle"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/TextFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/label_weight_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/unit_price"
                android:textSize="@dimen/text_medium" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryTextStyle"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:text="@string/category_quantity" />

            <EditText
                android:id="@+id/edit_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:padding="@dimen/margin_medium"
                android:textSize="@dimen/text_medium" />

            <ImageButton
                android:id="@+id/increaseButton"
                style="@style/ImageButton"
                android:layout_margin="@dimen/margin_small"
                android:src="@drawable/increase" />

            <ImageButton
                android:id="@+id/decreaseButton"
                style="@style/ImageButton"
                android:layout_margin="@dimen/margin_small"
                android:src="@drawable/minus" />

        </LinearLayout>
    </LinearLayout>

    <!-- Supplier info category -->
    <TextView
        style="@style/CategoryTextStyle"
        android:text="@string/category_supplier" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/TextFieldStyle"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_supplier_phone"
            style="@style/TextFieldStyle"
            android:ems="10"
            android:hint="@string/hint_supplier_phone_number"
            android:inputType="phone" />
    </LinearLayout>
</LinearLayout>